add swagger ui docs for organizer
